[package]
name = "rat-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
crossbeam = "0.8.2"
lazy_static = "1.4.0"
ordered-float = { version = "3.7.0", features = ["serde"] }
parking_lot = "0.12.1"
rayon = "1.7.0"
serde = { version = "1.0.177", features = ["derive"] }
thiserror = "1.0.44"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

